# best-shop-ever

./: .gitignore  Cargo.toml  docker-compose.yaml
application/: .dockerignore  Cargo.toml  Dockerfile
application/src/: main.rs
application/src/domain/item/: mod.rs
application/src/domain/item/controller/: mod.rs
application/src/domain/item/repository/: item_repository.rs  mod.rs  stub_item_repository.rs  tokio_item_repository.rs
application/src/domain/item/service/: item_service.rs  mod.rs
best-shop-ever/: Cargo.toml  Dockerfile
best-shop-ever/resources/: best-shop-ever.yaml
best-shop-ever/src/domain/item/controller/: mod.rs
best-shop-ever/src/domain/item/repository/: mod.rs
best-shop-ever/src/domain/item/service/: mod.rs
environment/postgres/initialization/: create_schema.sql  fill_data.sql
resources/: best-shop-ever.yaml
src/: main.rs
src/domain/item/: mod.rs
